# imogo-matrix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release-moderation-bot.yml
bots/faq-bot/: Cargo.toml  README.md  faq-bot.example.toml
bots/faq-bot/data/: faqs.yaml
bots/faq-bot/src/: config.rs  faqs.rs  handler.rs  lib.rs  main.rs  matrix_client.rs  reload.rs
bots/faq-bot/tests/: matching.rs
bots/moderation-bot/: Cargo.toml  README.md  mod-bot.example.toml
bots/moderation-bot/data/: banned_words.example.yaml
bots/moderation-bot/migrations/: 001_active_rooms.sql  002_banned_words.sql  003_audit_log.sql
bots/moderation-bot/src/: audit.rs  banned_words.rs  command.rs  config.rs  db.rs  error.rs  format.rs  handler.rs  lib.rs  main.rs  matrix_client.rs  mute.rs  pinned.rs  power_level.rs  reload.rs  rooms.rs
bots/moderation-bot/tests/: audit_chain.rs  auto_join.rs  banned_words_matcher.rs  command_parser.rs  mute_recovery.rs  power_level.rs
briefings/archive/: Briefing-01-Summary.md  Briefing-02a-Summary.md  Briefing-02b-Summary.md  Briefing-02c-1-Summary.md  Briefing-02c-2-Summary.md  Briefing-02c-3-Summary.md  Briefing-02d-Summary.md  Briefing-02e-Summary.md  Briefing-03-Summary.md  Briefing-04-Summary.md  Briefing-04b-Summary.md  Briefing-04d-Summary.md  Briefing-07-Summary.md
crates/imogo-provisioner/: Cargo.toml  provisioner.example.toml
crates/imogo-provisioner/migrations/: 0001_audit_log.sql  0002_webhook_nonces.sql  0003_accounts.sql  0004_account_state.sql  0005_b2c.sql
crates/imogo-provisioner/src/: accounts.rs  audit.rs  b2c.rs  capability.rs  config.rs  db.rs  error.rs  identity.rs  keys.rs  lib.rs  main.rs  matrix.rs  nonce_store.rs  provisioning.rs  telemetry.rs  tuwunel.rs  webhook.rs
crates/imogo-provisioner/src/http/: appservice.rs  b2c.rs  health.rs  mod.rs  router.rs  webhook.rs
crates/imogo-provisioner/tests/: audit.rs  b2c.rs  health.rs  lifecycle.rs  nonce_store.rs  provisioning.rs  webhook.rs
deploy/: LICENSE.md
deploy/scripts/: backup-bot-databases.sh  deploy-moderation-bot.sh  setup-vps-imogobot.sh
deploy/systemd/: imogo-moderation-bot.service
deploy/tuwunel/: registration-imogo-moderator.yaml
docs/: LICENSE.md
scripts/: LICENSE.md
