[workspace]
resolver = "2"
members = [
    "crates/imogo-provisioner",
    "bots/faq-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Sascha Daemgen <info@imogo.de>"]
repository = "https://github.com/saschadaemgen/imogo-matrix"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
