[package]
name = "imogo-provisioner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Matrix Application Service for imogo license-based account provisioning"

[lints]
workspace = true

[features]
default = []
# Compile in development public keys (test-license-server). MUST stay off in
# production builds: with this feature on, signatures from the dev license
# server are accepted by the webhook endpoint.
dev-keys = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Matrix client SDK
#
# We deliberately do not enable `sqlite`/`bundled-sqlite` here, because the
# audit log + nonce cache use sqlx (below) and sqlx and matrix-sdk-sqlite
# pin different libsqlite3-sys major versions (cargo rejects two crates with
# the same `links = "sqlite3"`). For the provisioner's needs the in-memory
# state store of matrix-sdk is sufficient: we only do a fresh
# `/_matrix/client/versions` ping per `MatrixRegistry::ping`, never a sync.
matrix-sdk = { version = "0.13", default-features = false, features = [
    "rustls-tls",
    "markdown",
] }

# URL parsing
url = { version = "2", features = ["serde"] }

# Time. `clock` enables Utc::now(), `std` for std::time integration,
# `serde` for derive support on DateTime.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Constant-time string comparison for hs_token verification
subtle = "2"

# HTTP client for outbound calls (homeserver liveness probe in 02b, more in 02c)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Webhook signature verification (license server -> provisioner)
ed25519-dalek = { version = "2", features = ["std", "zeroize"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
zeroize = "1"

# SQLite database (audit log + persistent nonce cache).
# `runtime-tokio` since the rest of the binary already runs on tokio. The
# `sqlite` feature pulls in libsqlite3-sys, which we configure below to
# build sqlite3 from source (Windows hosts do not ship sqlite3.lib).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Force the linked sqlite3 to be compiled from source. Without this the
# Windows MSVC linker fails to find a system sqlite3.lib.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# UUID for audit log subject IDs (used by 02c-3 onwards, introduced here)
uuid = { version = "1", features = ["v4", "serde"] }

# Random number generation for matrix UUIDs and initial passwords
rand = "0.8"

# Base32 encoding for matrix UUIDs (RFC 4648 lowercase, no padding)
data-encoding = "2"

[dev-dependencies]
# Testing
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "test-util"] }
wiremock = "0.6"
ed25519-dalek = { version = "2", features = ["std", "zeroize", "rand_core"] }
rand = "0.8"
tempfile = "3"
